[package]
name = "nil-slip44"
version = "0.3.4"
authors = ["Alexey Shekhirin <alexey@shekhirin.com>", "Larry Salibra <larry@newinternetlabs.com>"]
license = "MIT"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/nil-slip44"
repository = "https://github.com/newinternetlabs/nil-slip44"
homepage = "https://docs.rs/nil-slip44"
description = """
Mapping between SLIP-0044 coin types and the associated metadata.
"""
keywords = ["web3", "cryptocurrency", "bitcoin", "stacks"]

[dependencies]
itertools = { version = "0.10.1", optional = true }
reqwest = { version = "0.11.4", features = ["blocking"], optional = true }

[features]
parse-coins = ["itertools", "reqwest"]

[[bin]]
name = "parse-coins"
path = "src/bin/parse_coins.rs"
required-features = ["parse-coins"]
